--- a/easy-school/easy-school/Classes/Interface/Views/UserHeaderView/HeaderView.xib
+++ b/easy-school/easy-school/Classes/Interface/Views/UserHeaderView/HeaderView.xib
@@ -14,6 +14,9 @@
         <array key="Roboto-Medium.ttf">
             <string>Roboto-Medium</string>
         </array>
+        <array key="Roboto-Regular.ttf">
+            <string>Roboto-Regular</string>
+        </array>
     </customFonts>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="HeaderView" customModule="easy_school" customModuleProvider="target">
@@ -22,6 +25,7 @@
                 <outlet property="containerView" destination="YUr-E0-dTk" id="9xm-rJ-hmM"/>
                 <outlet property="coverView" destination="fzF-UL-NGy" id="VEX-pr-AkB"/>
                 <outlet property="headerView" destination="ZZX-MF-Hgt" id="3wr-pL-cGC"/>
+                <outlet property="stLabel" destination="06y-Q7-ufq" id="OaG-P8-lDK"/>
                 <outlet property="statusLabel" destination="NH2-Tq-fZl" id="7WP-mz-CgQ"/>
                 <outlet property="titleLabel" destination="2SQ-xs-Xxm" id="tDn-kD-raV"/>
             </connections>
@@ -37,12 +41,21 @@
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.5" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="depositphotos_61335521-stock-illustration-seamless-pattern-japanese-new-year" translatesAutoresizingMaskIntoConstraints="NO" id="fzF-UL-NGy">
                             <rect key="frame" x="0.0" y="0.0" width="414" height="132"/>
                         </imageView>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="06y-Q7-ufq">
+                            <rect key="frame" x="20" y="116" width="374" height="0.0"/>
+                            <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="16"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
+                        <constraint firstAttribute="bottom" secondItem="06y-Q7-ufq" secondAttribute="bottom" constant="16" id="JTp-UP-V1U"/>
                         <constraint firstAttribute="bottom" secondItem="fzF-UL-NGy" secondAttribute="bottom" id="N5q-NR-eMX"/>
                         <constraint firstItem="fzF-UL-NGy" firstAttribute="leading" secondItem="YUr-E0-dTk" secondAttribute="leading" id="TRv-pe-yt2"/>
                         <constraint firstAttribute="trailing" secondItem="fzF-UL-NGy" secondAttribute="trailing" id="eVS-F6-KPI"/>
+                        <constraint firstAttribute="trailing" secondItem="06y-Q7-ufq" secondAttribute="trailing" constant="20" id="hf7-9r-IpT"/>
+                        <constraint firstItem="06y-Q7-ufq" firstAttribute="leading" secondItem="YUr-E0-dTk" secondAttribute="leading" constant="20" id="s6W-jA-Fsy"/>
                         <constraint firstItem="fzF-UL-NGy" firstAttribute="top" secondItem="YUr-E0-dTk" secondAttribute="top" id="uFZ-Sa-hdv"/>
                     </constraints>
                 </view>
